# libvcs

./: .augment-guidelines  .codecov.yml  .coveragerc  .gitignore  .tmuxp.yaml  .tool-versions  .travis.yml  .windsurfrules  AGENTS.md  CHANGES  CITATION.cff  CLAUDE.md  LICENSE  MANIFEST.in  MIGRATION  Makefile  Pipfile  README.md  README.rst  TODO  bootstrap_env.py  conftest.py  justfile  mkdocs.yml  pydoc-markdown.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.cursor/rules/: git-commits.mdc
.github/workflows/: codeql-analysis.yml  docs.yml  libvcs-ci.yml  publish-docs.yml  tests.yml
assets/css/: custom.css
doc/: Makefile  api.rst  conf.py  developing.rst  index.rst
doc/_static/: libvcs.css
doc/_templates/: layout.html  more.html  page.html  star.html
docs/: AGENTS.md  Makefile  api.md  api.rst  conf.py  developing.md  history.md  index.md  index.rst  justfile  manifest.json  migration.md  pytest-plugin.md  quickstart.md  redirects.txt
docs-v2/: package.json
docs/_ext/: sphinx_toctree_signature.py
docs/_static/css/: custom.css
docs/_templates/: layout.html  page.html
docs/api/: base.md  git.md  hg.md  index.md  pytest-plugin.md  svn.md
docs/cmd/: core.md  git.md  hg.md  index.md  svn.md
docs/cmd/git/: branch.md  index.md  notes.md  reflog.md  remote.md  stash.md  submodule.md  tag.md  worktree.md
docs/contributing/: index.md  internals.md  workflow.md
docs/contributing/internals/: index.md  query_list.md
docs/internals/: async_run.md  async_subprocess.md  copy.md  dataclasses.md  exc.md  file_lock.md  index.md  query_list.md  run.md  shortcuts.md  subprocess.md  types.md
docs/parse/: base.md  git.md  hg.md  index.md  svn.md
docs/project/: code-style.md  contributing.md  index.md  releasing.md  workflow.md
docs/project/adr/: 0001-faithful-subprocess-output-capture.md  0002-order-independent-tests.md  index.md
docs/projects/: base.md  git.md  hg.md  index.md  svn.md
docs/states/: base.md  git.md  hg.md  index.md  svn.md
docs/sync/: base.md  git.md  hg.md  index.md  svn.md
docs/topics/: asyncio.md  filtering.md  index.md  traversing_git.md  url_parsing.md
docs/url/: base.md  constants.md  git.md  hg.md  index.md  registry.md  svn.md
libvcs/: __about__.py  __init__.py  _compat.py  base.py  conftest.py  exc.py  git.py  hg.py  shortcuts.py  svn.py  types.py  util.py
libvcs/_internal/: dataclasses.py  query_list.py  run.py  shortcuts.py  subprocess.py  types.py
libvcs/cmd/: core.py  git.py  hg.py  svn.py
libvcs/parse/: base.py  git.py  hg.py  svn.py
libvcs/projects/: base.py  constants.py  git.py  hg.py  svn.py
libvcs/states/: base.py  constants.py  git.py  hg.py  svn.py
libvcs/utils/: dataclasses.py  module_loading.py  query_list.py  run.py  subprocess.py
notes/: 2025-11-26-command-support.md  plan.md
requirements/: dev.txt  doc.txt  test.txt
src/libvcs/: __about__.py  __init__.py  conftest.py  exc.py  pytest_plugin.py  shell.py
src/libvcs/_internal/: async_run.py  async_subprocess.py  copy.py  dataclasses.py  file_lock.py  module_loading.py  query_list.py  run.py  shortcuts.py  subprocess.py  types.py
src/libvcs/_vendor/: version.py
src/libvcs/cmd/: __init__.py  git.py  hg.py  svn.py
src/libvcs/cmd/_async/: __init__.py  git.py  hg.py  svn.py
src/libvcs/data/: repotest.dump
src/libvcs/parse/: git.py  svn.py
src/libvcs/projects/: base.py
src/libvcs/sync/: __init__.py  base.py  constants.py  git.py  hg.py  svn.py
src/libvcs/sync/_async/: __init__.py  base.py  git.py  hg.py  svn.py
src/libvcs/url/: __init__.py  base.py  constants.py  git.py  hg.py  registry.py  svn.py
tests/: __init__.py  conftest.py  test_base.py  test_exc.py  test_fixture_performance.py  test_git.py  test_hg.py  test_pytest_plugin.py  test_shortcuts.py  test_svn.py  test_util.py
tests/_internal/: test_async_run.py  test_async_subprocess.py  test_copy.py  test_file_lock.py  test_file_lock_async.py  test_query_list.py  test_run.py
tests/_internal/subprocess/: conftest.py  test_SubprocessCommand.py
tests/benchmarks/: __init__.py  test_sync_git.py
tests/cmd/: __init__.py  test_core.py  test_git.py  test_hg.py  test_svn.py
tests/cmd/_async/: __init__.py  test_git.py  test_hg.py  test_svn.py
tests/data/: __init__.py
tests/parse/: test_git.py  test_hg.py  test_svn.py
tests/projects/: test_base.py  test_conftest.py  test_git.py  test_hg.py  test_svn.py
tests/states/: test_base.py  test_conftest.py  test_git.py  test_hg.py  test_svn.py
tests/sync/: __init__.py  test_base.py  test_git.py  test_hg.py  test_svn.py
tests/sync/_async/: __init__.py  test_git.py  test_hg.py  test_svn.py
tests/url/: __init__.py  test_git.py  test_hg.py  test_registry.py  test_svn.py
tests/utils/: test_module_loading.py  test_query_list.py  test_subprocess.py
tests/utils/subprocess/: conftest.py  test_SubprocessCommand.py
