[tool.mypy]
strict = true
files = [
  "src",
  "tests",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "docs/conf.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "return NotImplemented",
  "def parse_args",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "@overload( |$)",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
]

[tool.ruff.lint.isort]
known-first-party = [
  "libvcs",
]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--tb=short --no-header --showlocals --doctest-modules"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
testpaths = [
  "src/libvcs",
  "tests",
  "docs",
  "README.md",
]
filterwarnings = [
  "ignore:The frontend.Option(Parser)? class.*:DeprecationWarning::",
]

[tool.pytest-watcher]
now = true
ignore_patterns = ["*.py.*.py"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "libvcs"
version = "0.30.1"
description = "Lite, typed, python utilities for Git, SVN, Mercurial, etc."
license = {text = "MIT License"}
authors = [
  {name = "Tony Narlock", email = "tony@git-pull.com"},
]
keywords = [
  "libvcs",
  "git",
  "mercurial",
  "hg",
  "svn",
  "subversion",
  "library",
  "lib",
  "wrapper",
  "vcs",
  "version control",
  "scm",
  "clone",
  "checkout",
  "abstraction",
  "version-control",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Utilities",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Version Control :: Mercurial",
  "Topic :: System :: Shells",
  "Typing :: Typed",
]
readme = "README.md"
dependencies = [
    "typing-extensions == 4.12.2",]

[project.optional-dependencies]
coverage = [
    "codecov == 2.1.13",
    "coverage == 7.6.1",
    "pytest-cov == 5.0.0",]
docs = [
    "sphinx == 7.4.7",
    "furo == 2024.8.6",
    "gp-libs == 0.0.6.post0",
    "sphinx-autobuild == 2024.4.16",
    "sphinx-autodoc-typehints == 2.2.3",
    "sphinx-inline-tabs == 2023.4.21",
    "sphinxext-opengraph == 0.7.5",
    "sphinx-copybutton == 0.5.2",
    "sphinxext-rediraffe == 0.2.7",
    "myst-parser == 3.0.1",
    "linkify-it-py == 2.0.3",]
lint = [
    "ruff == 0.6.2",
    "mypy == 1.11.1",]
test = [
    "gp-libs == 0.0.6.post0",
    "pytest == 8.3.2",
    "pytest-rerunfailures == 14.0",
    "pytest-mock == 3.14.0",
    "pytest-watcher == 0.4.2",]

[project.urls]
"Bug Tracker" = "https://github.com/vcs-python/libvcs/issues"
Documentation = "https://libvcs.git-pull.com"
Repository = "https://github.com/vcs-python/libvcs"
Changes = "https://github.com/vcs-python/libvcs/blob/master/CHANGES"