[project]
name = "libvcs"
version = "0.36.0"
description = "Lite, typed, python utilities for Git, SVN, Mercurial, etc."
requires-python = ">=3.9,<4.0"
authors = [
  {name = "Tony Narlock", email = "tony@git-pull.com"}
]
homepage = "http://github.com/vcs-python/libvcs/"
license = { text = "MIT" }
keywords = [
  "libvcs",
  "git",
  "mercurial",
  "hg",
  "svn",
  "subversion",
  "library",
  "lib",
  "wrapper",
  "vcs",
  "version control",
  "scm",
  "clone",
  "checkout",
  "abstraction",
  "version-control",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Utilities",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Version Control :: Mercurial",
  "Topic :: System :: Shells",
  "Typing :: Typed",
]
readme = "README.md"
dependencies = [
  "typing-extensions; python_version == '3.10'"
]

[project.urls]
"Bug Tracker" = "https://github.com/vcs-python/libvcs/issues"
Documentation = "https://libvcs.git-pull.com"
Repository = "https://github.com/vcs-python/libvcs"
Changes = "https://github.com/vcs-python/libvcs/blob/master/CHANGES"

[tool.uv]
dev-dependencies = [
  # Docs
  "sphinx",
  "furo",
  "gp-libs",
  "sphinx-autobuild",
  "sphinx-autodoc-typehints",
  "sphinx-inline-tabs",
  "sphinxext-opengraph",
  "sphinx-copybutton",
  "sphinxext-rediraffe",
  "myst-parser",
  "linkify-it-py",
  # Testing
  "gp-libs",
  "pytest",
  "pytest-rerunfailures",
  "pytest-mock",
  "pytest-watcher",
  # Coverage
  "codecov",
  "coverage",
  "pytest-cov",
  # Lint
  "ruff",
  "mypy",
]

[dependency-groups]
docs = [
  "sphinx",
  "furo",
  "gp-libs",
  "sphinx-autobuild",
  "sphinx-autodoc-typehints",
  "sphinx-inline-tabs",
  "sphinxext-opengraph",
  "sphinx-copybutton",
  "sphinxext-rediraffe",
  "myst-parser",
  "linkify-it-py",
]
testing = [
  "gp-libs",
  "pytest",
  "pytest-rerunfailures",
  "pytest-mock",
  "pytest-watcher",
]
coverage =[
  "codecov",
  "coverage",
  "pytest-cov",
]
lint = [
  "ruff",
  "mypy",
]

[project.entry-points.pytest11]
libvcs = "libvcs.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
files = [
  "src",
  "tests",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "docs/conf.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "return NotImplemented",
  "def parse_args",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "@overload( |$)",
  "from __future__ import annotations",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
  "FA100",  # future annotations
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
]
extend-safe-fixes = [
  "UP006",
  "UP007",
]
pyupgrade.keep-runtime-typing = false

[tool.ruff.lint.isort]
known-first-party = [
  "libvcs",
]
combine-as-imports = true
required-imports = [
  "from __future__ import annotations",
]

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = [
  "cmd",
  "dataclasses",
  "subprocess",
  "types",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
  "--no-header",
  "--showlocals",
  "--doctest-docutils-modules",
  "-p no:doctest",
  "--reruns=2"
]
doctest_optionflags = [
  "ELLIPSIS",
  "NORMALIZE_WHITESPACE"
]
testpaths = [
  "src/libvcs",
  "tests",
  "docs",
  "README.md",
]
filterwarnings = [
  "ignore:The frontend.Option(Parser)? class.*:DeprecationWarning::",
]

[tool.pytest-watcher]
now = true
ignore_patterns = ["*.py.*.py"]
